// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeaheadInput passes through id 1`] = `
<input
  autoComplete="off"
  id="easy-as-123"
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="text"
  value="hi"
/>
`;

exports[`TypeaheadInput renders self and subcomponents 1`] = `
<input
  autoComplete="off"
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  type="text"
  value="hi"
/>
`;
